--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,8 @@
 [tool.poetry]
 name = "ado-py"
-version = "0.1.0"
+version = "0.1.1"
 description = "Do stuff with python. Quickly access functions defied in do.py from the command-line."
+packages = [ { include = "ado.py"}, ]
 authors = ["aahnik <daw@aahnik.dev>"]
 license = "MIT"
 readme = "README.md"
@@ -25,4 +26,4 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-ado = 'ado_py.ado:main'
+ado = 'ado:main'
